<resources>
    <string name="app_name">Association</string>
    <string name="association_game_title">Association Game</string>
    <string name="start_a_game_str">Start a game</string>
    <string name="about_the_game_str">About the game</string>
    <string name="ok_message">OK</string>
    <string name="about_game_content_str">Association game - is a simple game which rules you can easily find in the Internet or make up yourself. Made as task at NSU</string>
    <string name="about_game_str">About the game</string>
    <string name="invalid_team_names_title">Invalid team names</string>
    <string name="invalid_team_names_str">You can not use empty names. Please, type names of the teams</string>
    <string name="default_first_team_name">Monkeys</string>
    <string name="default_second_team_name">Apes</string>
    <string name="default_first_word">Example</string>
    <string name="type_a_name_of_the_first_team_str">Type a name of the first team</string>
    <string name="type_a_name_of_the_second_team_str">Type a name of the second team</string>
    <string name="ok_str">OK</string>
    <string name="pass_str">Pass</string>
    <string name="guess_str">Guessed!</string>
    <string name="team_title">Team:</string>
    <string name="current_score_titile">Current Score:</string>T
    <string name="banana_image_description">Banana image</string>
    <string name="filed_and_value_placeholder">%1$s : %2$s</string>
    <string name="round_str">Round</string>
    <string name="are_u_ready_str">are you ready?</string>
    <string name="are_you_ready_placeholder">%1$s, %2$s</string>
    <string name="team_str">Team</string>
    <string name="score_str">Score</string>
    <string name="game_over_str">Game Over</string>
    <string name="team_result_title">FirstTeamResultTitle</string>
    <string name="team_score">Team Score:</string>
    <string name="start_next_turn_str">Start next turn</string>
    <string name="time_example">Time</string>
</resources>
