<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/team_title"
            android:textSize="30sp"
            android:id="@+id/teamTitle" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_score_titile"
            android:textSize="20sp"
            android:id="@+id/scoreTitle"
            android:layout_below="@id/teamTitle"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="60"
            android:textSize="30sp"
            android:id="@+id/timeTitle"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/scoreTitle"
            android:layout_marginBottom="55dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_below="@id/timeTitle"
            android:text="@string/default_first_word"
            android:textSize="40sp"
            android:id="@+id/wordText" android:layout_centerHorizontal="true"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_str"
            android:id="@+id/passWordButton"
            android:background="@color/yellow_default"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_below="@id/wordText"
    android:layout_marginTop="110dp"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_str"
            android:id="@+id/guesssedWordButton"
            android:background="@color/yellow_default"
            android:layout_alignParentRight="true"
            android:layout_below="@id/wordText"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"/>
</RelativeLayout>