<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/association_game_title"
        android:id="@+id/associationGameTitle"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:textIsSelectable="false"
        android:textSize="38dp"
        android:gravity="center" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainGameImage"
        android:src="@drawable/banana"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"
        android:layout_gravity="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_a_game_str"
        android:id="@+id/startGameButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:background="#fcdf4a" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_the_game_str"
        android:id="@+id/aboutTheGameButton"
        android:layout_gravity="center_horizontal"
        android:background="#fcdf4a"
        android:layout_marginTop="20dp" />

</LinearLayout>
